2010-06-10  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Shinichiro Hamaji.

        Fix Bug 40452: REGRESSION: printing is broken if stylesheet has @page
        https://bugs.webkit.org/show_bug.cgi?id=40452

        * platform/chromium/test_expectations.txt:
        * platform/mac/printing/page-rule-in-media-query-expected.checksum: Added.
        * platform/mac/printing/page-rule-in-media-query-expected.png: Added.
        * platform/mac/printing/page-rule-in-media-query-expected.txt: Added.
        * printing/page-rule-in-media-query.html: Added.
2010-06-10  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Fix Bug 40452: REGRESSION: printing is broken if stylesheet has @page
        https://bugs.webkit.org/show_bug.cgi?id=40452

        Test: printing/page-rule-in-media-query.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSRuleSet::addRulesFromSheet):
        (WebCore::CSSRuleSet::addStyleRule):

Canonical link: https://commits.webkit.org/52007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60992 268f45cc-cd09-0410-ab3c-d52691b4dbfc