WebCore/css/CSSStyleSelector.cpp
@@ -357,7 +357,8 @@ public:
     typedef HashMap<AtomicStringImpl*, CSSRuleDataList*> AtomRuleMap;
     
     void addRulesFromSheet(CSSStyleSheet*, const MediaQueryEvaluator&, CSSStyleSelector* = 0);
-    
+
+    void addStyleRule(StyleBase* item);
     void addRule(CSSStyleRule* rule, CSSSelector* sel);
     void addPageRule(CSSStyleRule* rule, CSSSelector* sel);
     void addToRuleSet(AtomicStringImpl* key, AtomRuleMap& map,
@@ -2768,14 +2769,7 @@ void CSSRuleSet::addRulesFromSheet(CSSStyleSheet* sheet, const MediaQueryEvaluat
     for (int i = 0; i < len; i++) {
         StyleBase* item = sheet->item(i);
         if (item->isStyleRule()) {
-            if (item->isPageRule()) {
-                CSSPageRule* pageRule = static_cast<CSSPageRule*>(item);
-                addPageRule(pageRule, pageRule->selectorList().first());
-            } else {
-                CSSStyleRule* rule = static_cast<CSSStyleRule*>(item);
-                for (CSSSelector* s = rule->selectorList().first(); s; s = CSSSelectorList::next(s))
-                    addRule(rule, s);
-            }
+            addStyleRule(item);
         }
         else if (item->isImportRule()) {
             CSSImportRule* import = static_cast<CSSImportRule*>(item);
@@ -2792,9 +2786,7 @@ void CSSRuleSet::addRulesFromSheet(CSSStyleSheet* sheet, const MediaQueryEvaluat
                     CSSRule *childItem = rules->item(j);
                     if (childItem->isStyleRule()) {
                         // It is a StyleRule, so append it to our list
-                        CSSStyleRule* rule = static_cast<CSSStyleRule*>(childItem);
-                        for (CSSSelector* s = rule->selectorList().first(); s; s = CSSSelectorList::next(s))
-                            addRule(rule, s);
+                        addStyleRule(childItem);
                     } else if (childItem->isFontFaceRule() && styleSelector) {
                         // Add this font face to our set.
                         const CSSFontFaceRule* fontFaceRule = static_cast<CSSFontFaceRule*>(childItem);
@@ -2816,6 +2808,18 @@ void CSSRuleSet::addRulesFromSheet(CSSStyleSheet* sheet, const MediaQueryEvaluat
                 styleSelector->addVariables(variables);
         } else if (item->isKeyframesRule())
             styleSelector->addKeyframeStyle(static_cast<WebKitCSSKeyframesRule*>(item));
+    }
+}
+
+void CSSRuleSet::addStyleRule(StyleBase* item)
+{
+    if (item->isPageRule()) {
+        CSSPageRule* pageRule = static_cast<CSSPageRule*>(item);
+        addPageRule(pageRule, pageRule->selectorList().first());
+    } else {
+        CSSStyleRule* rule = static_cast<CSSStyleRule*>(item);
+        for (CSSSelector* s = rule->selectorList().first(); s; s = CSSSelectorList::next(s))
+            addRule(rule, s);
     }
 }
 
